--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "patch-admin": "node src/admin/extensions/patch-admin.js && patch-package @strapi/admin"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.4.6",
-    "@strapi/plugin-users-permissions": "4.4.6",
     "@strapi/plugin-i18n": "4.4.6",
+    "@strapi/plugin-users-permissions": "4.4.6",
+    "@strapi/strapi": "4.4.6",
     "mysql": "2.18.1"
   },
   "author": {
