--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "patch-admin": "node src/admin/extensions/patch-admin.js && patch-package @strapi/admin"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^1.1.2",
+    "@ckeditor/strapi-plugin-ckeditor": "^0.0.4",
+    "@strapi/plugin-color-picker": "^4.4.6",
+    "@strapi/plugin-documentation": "^4.4.6",
+    "@strapi/plugin-graphql": "^4.4.6",
     "@strapi/plugin-i18n": "4.4.6",
+    "@strapi/plugin-seo": "^1.7.6",
     "@strapi/plugin-users-permissions": "4.4.6",
     "@strapi/strapi": "4.4.6",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "strapi-plugin-deepl": "^0.4.0",
+    "strapi-plugin-navigation": "^2.2.2"
   },
   "author": {
     "name": "A Strapi developer"
